--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,8 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+gradle.properties
+
+.idea/
+
 test2.txt
